# melsDB

./: CMakeLists.txt  README.md
cli/: entryPoint.cpp
source/: data.cpp  data.hpp  dataFile.cpp  dataFile.hpp  define.hpp  entryPoint.cpp  interpreter.cpp  interpreter.hpp  iomanager.cpp  iomanager.hpp  lexMachine.cpp  lexMachine.hpp  opcode.cpp  opcode.hpp  record.hpp  table.cpp  table.hpp  tableFile.hpp  token.hpp  tokenDefinition.hpp  unicodeRecord.cpp  unicodeRecord.hpp  vm.cpp  vm.hpp
test/: main.cpp
